lib/fete/tt/scripts.treetop
module Fete
grammar Scripts
  include Lexer
  include Casting
  include Instructions

  rule scripts
    script+
  end

  rule script
    (script_with_title / script_with_instructions) <Script>
  end

  rule script_with_title
    nl? title casting_statement:casting_statement? instructions:instructions?
  end

  rule script_with_instructions
    nl? title:title? casting_statement:casting_statement? instructions
  end

  rule title
    '"' value:('\\"' / !'"' .)+ '"' nl {
        def value
            super.text_value.gsub(/\\"/, '"')
        end
    }
  end

end
end
